updated the seed to take in the new image